[gd_scene load_steps=4 format=2]

[ext_resource path="res://TODO_PHYSICS/Rafael/High_friction_2.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="Area" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.640427, 0.26363, -0.513979 )
mesh = SubResource( 2 )
material/0 = null

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Availability" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Availability" to="." method="_on_Availability_timeout"]
